--- a/main.css
+++ b/main.css
@@ -11,7 +11,9 @@ height: auto;
 }
 .carousel-img {
     max-height: 500px;
-    max-width: 95%;
+    max-width: 100%;
+    padding-left: 150px;
+    padding-right: 150px;
 }
 h2, h5, h4 {
     /* font-family: 'Shadows Into Light', cursive; 
