--- a/main.css
+++ b/main.css
@@ -12,8 +12,8 @@ height: auto;
 .carousel-img {
     max-height: 500px;
     max-width: 100%;
-    padding-left: 150px;
-    padding-right: 150px;
+    padding-left: 10%;
+    padding-right: 10%;
 }
 h2, h5, h4 {
     /* font-family: 'Shadows Into Light', cursive; 
