updated programming and services tab; prepped gallery for future production

--- a/main.css
+++ b/main.css
@@ -39,3 +39,8 @@ div {
     font-family: 'Raleway', sans-serif;
     border-radius: 5px;
 }
+.lvmheadings {
+    font-style: italic; 
+    font-weight: bolder;
+    text-decoration: underline;
+}
