updated file structure

--- a/css/styles.css
+++ b/css/styles.css
@@ -10426,7 +10426,7 @@ header.masthead .masthead-heading {
 
 section#contact {
   background-color: #5c7b9b;
-  background-image: url("../assets/img/map-image.png");
+  background-image: url("../assets2/img/map-image.png");
   background-repeat: no-repeat;
   background-position: center;
 }
